# lugaresi

./: README.md  pyproject.toml
src/luga/: cli.py  dashboard.py  engine.py
src/luga/streamlit/: Home.py
src/luga/streamlit/static/: robot.csv  totale.csv
